rubocop/examples/bad/Style_Documentation.rb
# TODO: This cop checks for missing top-level documentation
#   of classes and modules. Classes with no body are exempt from the check and
#   so are namespace modules - modules that have nothing
#   in their bodies except classes or other other modules.
